fixing address bar scrolling issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,16 @@
   }
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 @layer utilities {
